cloudformation/cfn_vpc.yaml
---
AWSTemplateFormatVersion: 2010-09-09

Description: >-
  AWS Base CloudFormation Labs Template.
  Create a VPC with 2 public and private subnets


Parameters:
  VPCName:
    Description: Name to use for this VPC
    Type: String
  NetworkOctetsVPC:
    Description: First two octets of network for VPC
    Type: String
  DomainName:
    Description: Domain name to use for this VPC
    Type: String
  InfraKeyName: 
    Description: Infrastructure SSH Key
    Type: String
  BaseAMIID:
    Description: AWS Base AMI
    Type: String
    

    
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Join ['', [!Ref NetworkOctetsVPC, .0.0/16]]
      EnableDnsSupport: true 
      EnableDnsHostnames: true 
      Tags:
      - Key: Name
        Value: !Ref VPCName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "internetgateway" ] ]

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "routetable" ] ]

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
        
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ] 
      CidrBlock: !Join ['', [!Ref NetworkOctetsVPC, .0.0/24]]
      MapPublicIpOnLaunch: true 
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "publicsubnet1" ] ]

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ] 
      CidrBlock: !Join ['', [!Ref NetworkOctetsVPC, .1.0/24]]
      MapPublicIpOnLaunch: true 
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "publicsubnet2" ] ]

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  EIPforNatGateway:
    Type: AWS::EC2::EIP
    DependsOn: VPCGatewayAttachment
    Properties:
      Domain: vpc 
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "EIPforNatGateway" ] ]

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIPforNatGateway.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "NatGateway" ] ]

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "PrivateRouteTable1" ] ]

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "PrivateRouteTable2" ] ]

  PrivateRouteForAz1:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway 

  PrivateRouteForAz2:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Join ['', [!Ref NetworkOctetsVPC, .2.0/24]]
      MapPublicIpOnLaunch: false 
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "PrivateSubnet1" ] ]

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ] 
      CidrBlock: !Join ['', [!Ref NetworkOctetsVPC, .3.0/24]]
      MapPublicIpOnLaunch: false 
      Tags:
      - Key: Name
        Value: !Join [ "-", [ !Ref VPCName, "PrivateSubnet2" ] ]

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1
  
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  PrivateHostedZone:
    Type: AWS::Route53::HostedZone
    Properties:
      HostedZoneConfig:
        Comment: !Join [' ', [Private Hosted Zone for, !Ref DomainName]]
      HostedZoneTags:
        - Key: environment
          Value: !Ref VPCName
      Name: !Join ['', [!Ref VPCName, ., !Ref DomainName]]
      VPCs:
        - VPCId: !Ref VPC
          VPCRegion: us-east-1


  BastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join ["-", [bastion, security-group]]
      GroupDescription: "Bastion Security Groups"
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: icmp
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Join ["-", [bastion, security-group]]

  BastionInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref BaseAMIID
      InstanceType: "t3.micro"
      KeyName: !Ref InfraKeyName
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref BastionSecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
             #!/bin/bash -xe
             sudo hostnamectl set-hostname bastion
      Tags:
      - Key: Name
        Value: "bastion"






Outputs:
  VPC:
    Description: Infra VPC
    Value: !Ref VPC
  PublicSubnet1:
    Description: Public Subnet 1
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: Public Subnet 2
    Value: !Ref PublicSubnet2
  PrivateSubnet1:
    Description: Private Subnet 1
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Description: Private Subnet 2
    Value: !Ref PrivateSubnet2
  PrivateHostedZone:
    Description: Private Zone ID
    Value: !Ref PrivateHostedZone
  BastionDNSName:
    Description: Bastion Instance DNS Name
    Value: !GetAtt BastionInstance.PublicDnsName
  BastionIPAddress:
    Description: Bastion Instance IP Address
    Value: !GetAtt BastionInstance.PublicIp
